# LegalDocLLM

./: .gitignore  README.md  lease_entries.csv  pyproject.toml
src/: concurrency_test.py  lease_entry.py  main.py  model.py  parse_data.py  streamlit.py  tests.py  utils.py
